# docketeer

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  PLAN-1password-tests.md  PLAN-anthropic-tests.md  PLAN-deepinfra-tests.md  PLAN-mcp-tests.md  PLAN-rocketchat-tests.md  README.md  docker-compose.tui.yml  docker-compose.yml  loq.toml  pyproject.toml  run-tests
docketeer/: AGENTS.md  README.md  pyproject.toml
docketeer-agentskills/: AGENTS.md  README.md  pyproject.toml
docketeer-agentskills/src/docketeer_agentskills/: __init__.py  discovery.py  prompt.py  tools.py
docketeer-agentskills/tests/: conftest.py  helpers.py  test_discovery.py  test_prompt.py  test_tools.py
docketeer-autonomy/: AGENTS.md  README.md  pyproject.toml
docketeer-autonomy/src/docketeer_autonomy/: __init__.py  context.py  cycles.py  journal.py  lines.py  people.py  practice.md  prompt.py  rooms.py  tasks.py
docketeer-autonomy/tests/: conftest.py  helpers.py  test_context.py  test_cycles.py  test_digest.py  test_lines.py  test_people.py  test_prompt.py  test_rooms.py
docketeer-bubblewrap/: AGENTS.md  README.md  pyproject.toml
docketeer-bubblewrap/src/docketeer_bubblewrap/: __init__.py  executor.py
docketeer-bubblewrap/tests/: test_claude_args.py  test_executor.py  test_mcp_bridge.py
docketeer-deepinfra/: AGENTS.md  README.md  pyproject.toml
docketeer-deepinfra/src/docketeer_deepinfra/: __init__.py  api_backend.py  loop.py
docketeer-deepinfra/tests/: conftest.py  helpers.py  test_api_backend.py  test_init.py  test_loop_agentic.py  test_loop_build.py  test_loop_callbacks.py  test_loop_execute.py  test_loop_serialize.py  test_loop_stream.py  test_loop_usage.py
docketeer-git/: AGENTS.md  README.md  pyproject.toml
docketeer-git/src/docketeer_git/: __init__.py  backup.py
docketeer-git/tests/: conftest.py  test_backup.py
docketeer-mcp/: AGENTS.md  README.md  pyproject.toml
docketeer-mcp/src/docketeer_mcp/: __init__.py  config.py  hook.py  manager.py  oauth.py  prompt.py  tasks.py  tools.py  transport.py
docketeer-mcp/tests/: conftest.py  test_config.py  test_hook.py  test_manager.py  test_oauth.py  test_prompt.py  test_tasks.py  test_tools.py  test_tools_oauth.py  test_tools_oauth_edge_cases.py  test_transport.py
docketeer-monty/: AGENTS.md  README.md  pyproject.toml
docketeer-monty/src/docketeer_monty/: __init__.py  tools.py
docketeer-monty/tests/: conftest.py  test_tools.py
docketeer-rocketchat/: AGENTS.md  README.md  pyproject.toml
docketeer-rocketchat/src/docketeer_rocketchat/: __init__.py  client.py  ddp.py  parsing.py  room_context.py
docketeer-rocketchat/tests/: conftest.py  test_connection.py  test_ddp.py  test_messages.py  test_reconnect.py  test_rest.py  test_room_context.py  test_room_slug.py  test_threads.py  test_tools.py
docketeer-search/: AGENTS.md  README.md  pyproject.toml
docketeer-search/src/docketeer_search/: __init__.py  cli.py  embedding.py  index.py  store.py  tasks.py  tools.py
docketeer-search/tests/: conftest.py  helpers.py  test_cli.py  test_embedding.py  test_index.py  test_init.py  test_store.py  test_tasks.py  test_tools.py
docketeer-slack/: README.md  pyproject.toml
docketeer-slack/src/docketeer_slack/: __init__.py  client.py  interactions.py  parsing.py  room_context.py
docketeer-slack/tests/: conftest.py  test_connection.py  test_edge_branches.py  test_interactions.py  test_messages.py  test_more_coverage.py  test_parsing.py  test_reconnect.py  test_rest.py  test_room_context.py  test_tools.py
docketeer-tui/: AGENTS.md  README.md  pyproject.toml
docketeer-tui/src/docketeer_tui/: __init__.py  client.py  prompt.py
docketeer-tui/tests/: test_client.py  test_prompt.py
docketeer-web/: AGENTS.md  README.md  pyproject.toml
docketeer-web/src/docketeer_web/: __init__.py  tools.py
docketeer-web/tests/: conftest.py  test_tools.py  test_web_request.py
docketeer/src/docketeer/: __init__.py  antenna.py  antenna_tools.py  audit.py  brain.py  chat.py  core_prompt.md  cycles.md  cycles.py  dependencies.py  digest.py  environment.py  executor.py  handlers.py  hooks.py  logging.py  main.py  migration.py  people.py  plugins.py  practice.md  prompt.py  scheduling.py  search.py  signal_loop.py  soul.md  tasks.py  testing.py  tools.py  toolshed.py  vault.py  watcher.py  workspace.py
docketeer/src/docketeer/brain/: __init__.py  (+11 more)
docketeer/tests/: conftest.py  test_antenna_hook.py  test_cross_room_messages.py  test_cycles.py  test_dependencies.py  test_digest.py  test_environment.py  test_executor.py  test_hooks.py  test_logging.py  test_memory_vault.py  test_migration.py  test_migration_001.py  test_migration_002.py  test_model_threading.py  test_nudge_security.py  test_people.py  test_plugins.py  test_prompt.py  test_react.py  test_room_messages.py  test_rooms.py  test_scheduling_hook.py  test_search.py  test_tasks.py  test_tasks_recurring.py  test_threads.py  test_toolshed.py  test_toolshed_node.py  test_toolshed_python.py  test_usage_tracking.py  test_vault.py  test_watcher.py  test_wrap_up.py
docketeer/tests/antenna/: test_antenna.py  test_cull_signal_logs.py  test_filters.py  test_orchestrator.py  test_signal_loop.py  test_tools.py
docketeer/tests/brain/: test_agentic_loop.py  test_backend.py  test_brain.py  test_brain_callbacks.py  test_build_content.py  test_bwrap_command.py  test_claude_code_backend.py  test_claude_code_output.py  test_compaction_context.py  test_context_providers.py  test_error_handling.py  test_helpers.py  test_invoke_claude.py  test_logging.py  test_mcp_server.py  test_mcp_transport.py  test_model_tiers.py  test_profile_loading.py  test_room_context_loading.py  test_stream_response.py  test_workspace_pulse.py
docketeer/tests/main/: conftest.py  test_cycles.py  test_handlers.py  test_handlers_reactions.py  test_handlers_streaming.py  test_handlers_thread_status.py  test_history.py  test_process_messages.py  test_registration.py  test_run.py  test_scheduling_tools.py
docketeer/tests/tools/: test_executor.py  test_file_ops.py  test_journal.py  test_registry.py  test_vault.py
(+116 files in other folders)
