[project]
name = "docketeer"
version = "0.1.0"
description = "Lightweight agentic system using Claude, pydocket, and Rocket Chat"
requires-python = ">=3.12"
dependencies = [
    "pydocket",
    "anthropic",
    "websockets",
    "pyyaml",
    "watchfiles",
    "httpx",
]

[project.scripts]
docketeer = "docketeer.main:run"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docketeer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
