[project]
name = "docketeer-autonomy"
dynamic = ["version"]
description = "Autonomous inner life plugin for Docketeer — reverie, consolidation, journaling, and profiles"
readme = "README.md"
authors = [
    { name = "Chris Guidry", email = "guid@omg.lol" }
]
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "docketeer",
    "pydocket",
]

[project.urls]
Homepage = "https://github.com/chrisguidry/docketeer"
Repository = "https://github.com/chrisguidry/docketeer"
Issues = "https://github.com/chrisguidry/docketeer/issues"

[project.entry-points."docketeer.tools"]
autonomy = "docketeer_autonomy"

[project.entry-points."docketeer.prompt"]
autonomy = "docketeer_autonomy.prompt:provide_autonomy_prompt"

[project.entry-points."docketeer.tasks"]
autonomy = "docketeer_autonomy:task_collections"

[project.entry-points."docketeer.context"]
autonomy = "docketeer_autonomy.context:create_context_provider"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options.root = ".."

[tool.hatch.build.targets.wheel]
packages = ["src/docketeer_autonomy"]

[tool.uv.sources]
docketeer = { workspace = true }

[tool.pytest.ini_options]
minversion = "9.0"
timeout = 1
addopts = [
    "--import-mode=importlib",
    "--cov=docketeer_autonomy",
    "--cov=tests",
    "--cov-config=../pyproject.toml",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
]
