[project]
name = "docketeer-bubblewrap"
dynamic = ["version"]
description = "Bubblewrap sandbox executor plugin for Docketeer"
readme = "README.md"
authors = [
    { name = "Chris Guidry", email = "guid@omg.lol" }
]
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "docketeer",
]

[project.urls]
Homepage = "https://github.com/chrisguidry/docketeer"
Repository = "https://github.com/chrisguidry/docketeer"
Issues = "https://github.com/chrisguidry/docketeer/issues"

[project.entry-points."docketeer.executor"]
bubblewrap = "docketeer_bubblewrap"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options.root = ".."

[tool.hatch.build.targets.wheel]
packages = ["src/docketeer_bubblewrap"]

[tool.uv.sources]
docketeer = { workspace = true }

[tool.docketeer.ci]
apt-packages = ["bubblewrap"]
sysctl = ["kernel.apparmor_restrict_unprivileged_userns=0"]

[tool.pytest.ini_options]
minversion = "9.0"
timeout = 1
addopts = [
    "--import-mode=importlib",
    "--cov=docketeer_bubblewrap",
    "--cov=tests",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
]
