[project]
name = "docketeer-rocketchat"
version = "0.1.0"
description = "Rocket Chat backend for Docketeer"
authors = [
    { name = "Chris Guidry", email = "chris@theguidrys.us" }
]
requires-python = ">=3.12"
dependencies = [
    "docketeer",
    "httpx",
    "websockets",
]

[project.entry-points."docketeer.chat"]
rocketchat = "docketeer_rocketchat"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docketeer_rocketchat"]

[tool.uv.sources]
docketeer = { workspace = true }

[tool.pytest_env]
DOCKETEER_ROCKETCHAT_URL = "http://localhost:3000"
DOCKETEER_ROCKETCHAT_USERNAME = "testbot"
DOCKETEER_ROCKETCHAT_PASSWORD = "testpass"
DOCKETEER_ANTHROPIC_API_KEY = "test-key"

[tool.pytest.ini_options]
minversion = "9.0"
addopts = [
    "--import-mode=importlib",
    "--cov=src/docketeer_rocketchat",
    "--cov-branch",
    "--cov-report=term-missing",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
]

[tool.coverage.run]
branch = true
source = ["src/docketeer_rocketchat"]

[tool.coverage.report]
fail_under = 100
precision = 2
skip_empty = true
skip_covered = true
exclude_also = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
    "@abstractmethod",
]
