[project]
name = "docketeer-rocketchat"
dynamic = ["version"]
description = "Rocket Chat backend for Docketeer"
readme = "README.md"
authors = [
    { name = "Chris Guidry", email = "chris@theguidrys.us" }
]
requires-python = ">=3.12"
dependencies = [
    "docketeer",
    "httpx",
    "websockets",
]

[project.entry-points."docketeer.chat"]
rocketchat = "docketeer_rocketchat"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options.root = ".."

[tool.hatch.build.targets.wheel]
packages = ["src/docketeer_rocketchat"]

[tool.uv.sources]
docketeer = { workspace = true }

[tool.pytest_env]
DOCKETEER_ROCKETCHAT_URL = "http://localhost:3000"
DOCKETEER_ROCKETCHAT_USERNAME = "testbot"
DOCKETEER_ROCKETCHAT_PASSWORD = "testpass"
DOCKETEER_ANTHROPIC_API_KEY = "test-key"

[tool.pytest.ini_options]
minversion = "9.0"
addopts = [
    "--import-mode=importlib",
    "--cov=docketeer_rocketchat",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
]
