[project]
name = "docketeer-slack"
dynamic = ["version"]
description = "Slack backend for Docketeer"
readme = "README.md"
authors = [
    { name = "Chris Guidry", email = "guid@omg.lol" }
]
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "docketeer",
    "httpx",
    "websockets",
]

[project.urls]
Homepage = "https://github.com/chrisguidry/docketeer"
Repository = "https://github.com/chrisguidry/docketeer"
Issues = "https://github.com/chrisguidry/docketeer/issues"

[project.entry-points."docketeer.chat"]
slack = "docketeer_slack"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options.root = ".."

[tool.hatch.build.targets.wheel]
packages = ["src/docketeer_slack"]

[tool.uv.sources]
docketeer = { workspace = true }

[tool.pytest_env]
DOCKETEER_SLACK_BOT_TOKEN = "xoxb-test"
DOCKETEER_SLACK_APP_TOKEN = "xapp-test"

[tool.pytest.ini_options]
minversion = "9.0"
timeout = 1
addopts = [
    "--import-mode=importlib",
    "--cov=docketeer_slack",
    "--cov=tests",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
]
