[project]
name = "docketeer"
version = "0.1.0"
description = "Lightweight agentic system using Claude, pydocket, and Rocket Chat"
readme = "../README.md"
authors = [
    { name = "Chris Guidry", email = "chris@theguidrys.us" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "pydocket",
    "pyyaml",
    "watchfiles",
]

[project.scripts]
docketeer = "docketeer.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docketeer"]

[tool.pytest_env]
DOCKETEER_ANTHROPIC_API_KEY = "test-key"

[tool.pytest.ini_options]
minversion = "9.0"
addopts = [
    "--import-mode=importlib",
    "--cov=src/docketeer",
    "--cov-branch",
    "--cov-report=term-missing",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
]

[tool.coverage.run]
branch = true
source = ["src/docketeer"]
omit = ["src/docketeer/__main__.py", "src/docketeer/testing.py"]

[tool.coverage.report]
fail_under = 100
precision = 2
skip_empty = true
skip_covered = true
exclude_also = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
    "@abstractmethod",
]
